[package]
name = "random-access-storage"
version = "2.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/datrs/random-access-storage"
documentation = "https://docs.rs/random-access-storage"
description = "Abstract interface to implement random-access instances."
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>"]
readme = "README.md"

[dependencies]
failure = "0.1.1"
